- fix: tighten FAQ category column spacing

--- a/src/app/features/admin/pages/admin-dashboard/admin-dashboard.component.scss
+++ b/src/app/features/admin/pages/admin-dashboard/admin-dashboard.component.scss
@@ -1631,11 +1631,11 @@ table {
 }
 
 .solution-col-width {
-  width: 21%;
+  width: 24%;
 }
 
 .category-col-width {
-  width: 14%;
+  width: 9%;
 }
 
 .date-col-width {
